--- a/index.html
+++ b/index.html
@@ -174,9 +174,10 @@ float snoise(vec3 v)
 	
 	</script>
 	<script src='world.js'></script>
-	<audio autoplay="autoplay">  
-   		<source src="love.mp3" />  
-	</audio> 
+	<script>
+	   var world = new World();
+	  	
+	</script>
 		
 	</body>
 </html>
